--- a/mods.html
+++ b/mods.html
@@ -103,7 +103,7 @@ Menu
 <div class="post_column col-xl-12 col-lg-12 col-md-12 col-sm-12 col-xs-12 col-12">
 <div class="ttr_mods_html_column00">
 <div class="margin_collapsetop"></div>
-<div class="html_content"><p style="text-align:Center; display:block; "><span style="font-weight:700;font-size:5.714em;color:rgba(255,255,255,1);">Moderators</span></p></div>
+<div class="html_content"><p style="text-align:Center; display:block; "><span style="font-weight:700;font-size:5.714em;color:rgba(255,255,255,1);">Mods</span></p></div>
 <div class="margin_collapsetop"></div>
 <div style="clear:both;width:0px;"></div>
 </div>
