--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@ Menu
 <div class="post_column col-xl-3 col-lg-3 col-md-3 col-sm-6 col-xs-6 col-6">
 <div class="ttr_home_html_column73">
 <div class="margin_collapsetop"></div>
-<div class="html_content"><p style="margin:0px 0px 0px 0px;text-align:Center; display:block; "><span style="font-weight:600;font-size:2.857em;color:rgba(53,181,235,1);">3b</span></p><p style="margin:0px 0px 0px 0px;text-align:Center; display:block; "><span style="font-size:1.429em;color:rgba(255,255,255,1);">GP Lost in Wildy</span></p></div>
+<div class="html_content"><p style="margin:0px 0px 0px 0px;text-align:Center; display:block; "><span style="font-weight:600;font-size:2.857em;color:rgba(53,181,235,1);">4.6B</span></p><p style="margin:0px 0px 0px 0px;text-align:Center; display:block; "><span style="font-size:1.429em;color:rgba(255,255,255,1);">GP Lost in Wildy</span></p></div>
 <div class="margin_collapsetop"></div>
 <div style="clear:both;width:0px;"></div>
 </div>
