--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@ Menu
 <div class="post_column col-xl-3 col-lg-3 col-md-4 col-sm-6 col-xs-6 col-6">
 <div class="ttr_home_html_column110">
 <div class="margin_collapsetop"></div>
-<div class="html_content"><p><span class="ttr_image" style="float:none;display:block;overflow:hidden;text-align:center;margin:0px 0px 0px 0px;"><span><a href="https://wiseoldman.net/" target="_blank"><img class="ttr_uniform ttr_animation" style="max-height:128px;max-width:128px;margin:0px 0px 0px 0px;" src="images/wom3.png" alt="WOM" data-animation="MagnifyX" data-animation-to="1.2" data-animation-dur="0.5" /></a></span><br /></span></p></div>
+<div class="html_content"><p><span class="ttr_image" style="float:none;display:block;overflow:hidden;text-align:center;margin:0px 0px 0px 0px;"><span><a href="https://wiseoldman.net/groups/6847" target="_blank"><img class="ttr_uniform ttr_animation" style="max-height:128px;max-width:128px;margin:0px 0px 0px 0px;" src="images/wom3.png" alt="WOM" data-animation="MagnifyX" data-animation-to="1.2" data-animation-dur="0.5" /></a></span><br /></span></p></div>
 <div class="margin_collapsetop"></div>
 <div style="clear:both;width:0px;"></div>
 </div>
@@ -422,7 +422,7 @@ Menu
 <div class="post_column col-xl-3 col-lg-3 col-md-4 col-sm-6 col-xs-6 col-6">
 <div class="ttr_home_html_column112">
 <div class="margin_collapsetop"></div>
-<div class="html_content"><p><span class="ttr_image" style="float:none;display:block;overflow:hidden;text-align:center;margin:0px 0px 0px 0px;"><span><a href="https://discord.com/" target="_blank"><img class="ttr_uniform ttr_animation" style="max-height:128px;max-width:128px;margin:0px 0px 0px 0px;" src="images/disc.png" alt="Discord" data-animation="MagnifyX" data-animation-to="1.2" data-animation-dur="0.5" /></a></span></span></p></div>
+<div class="html_content"><p><span class="ttr_image" style="float:none;display:block;overflow:hidden;text-align:center;margin:0px 0px 0px 0px;"><span><a href="https://discord.gg/TVrAwAbxmQ" target="_blank"><img class="ttr_uniform ttr_animation" style="max-height:128px;max-width:128px;margin:0px 0px 0px 0px;" src="images/disc.png" alt="Discord" data-animation="MagnifyX" data-animation-to="1.2" data-animation-dur="0.5" /></a></span></span></p></div>
 <div class="margin_collapsetop"></div>
 <div style="clear:both;width:0px;"></div>
 </div>
