--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 <title>
 Lords of RNG
 </title>
+<link rel="icon" href="images/pinkfavicon.png" type="icon/png">
 <link rel="stylesheet"  href="bootstrap.css" type="text/css" media="screen"/>
 <link rel="stylesheet"  href="style.css" type="text/css" media="screen"/>
 <!--[if lte IE 8]>
