--- a/mods.html
+++ b/mods.html
@@ -19,6 +19,7 @@
 <title>
 Mods
 </title>
+<link rel="icon" href="images/pinkfavicon.png" type="icon/png">
 <link rel="stylesheet"  href="bootstrap.css" type="text/css" media="screen"/>
 <link rel="stylesheet"  href="style.css" type="text/css" media="screen"/>
 <!--[if lte IE 8]>
